Shared Module with navbar and footer Created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>{{ title }}</h1>
+<app-navbar></app-navbar>
 
-<app-main-page></app-main-page>
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
