Added filters component

--- a/src/app/countries/main-page/main-page.component.html
+++ b/src/app/countries/main-page/main-page.component.html
@@ -1,11 +1,4 @@
-<div>
-  <div style="border: 1px solid black;"  *ngFor="let country of countries" >
 
-    <div></div>
-    <p>{{ country.name }}</p>
-    <p>{{ country.population }}</p>
-    <p>{{ country.region }}</p>
-    <p>{{ country.capital }}</p>
+<app-filters></app-filters>
 
-  </div>
-</div>
+<app-cards [countries]="countries" ></app-cards>
