--- a/src/app/countries/components/cards/cards.component.html
+++ b/src/app/countries/components/cards/cards.component.html
@@ -1,9 +1,15 @@
-<div style="border: 1px solid black;"  *ngFor="let country of countries" >
+  <mat-card *ngFor="let country of countries" style=" width: 21vw;" >
+    
+    <img mat-card-image src={{country.flag}} />
 
-    <div></div>
-    <p>{{ country.name }}</p>
-    <p>{{ country.population }}</p>
-    <p>{{ country.region }}</p>
-    <p>{{ country.capital }}</p>
+    <mat-card-content>
 
-  </div>
+      <p>{{ country.name }}</p>
+      <p>{{ country.population | number}}</p>
+      <p>{{ country.region }}</p>
+      <p>{{ country.capital }}</p>
+
+
+    </mat-card-content>
+
+  </mat-card>
